combined map and flatMap in StreamPractice + refactored CandidateValidator private method